--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
     background-size: contain;
     background-color: #fff;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     /* overflow: hidden; */
     border-radius: 30px;
@@ -36,11 +36,13 @@ body {
     display: flex;
     align-items: center;
     overflow: hidden;
+    width: 43%;
 }
 
-.image-wrapper,
+/* .image-wrapper, */
 .faq-wrapper {
-    width: 50%;
+    width: 57%;
+    padding-inline: 80px;
 }
 
 .box-img {
@@ -53,9 +55,21 @@ img.woman-illustration {
     margin-left: -60px;
 }
 
-.answer {
+/* .answer {
     display: none;
-}
+} */
+
+.answer {
+    opacity: 0;
+    height: 0;
+    overflow: hidden;
+    transition: opacity 0.3s ease-in-out, height 0.3s ease-in-out;
+  }
+  
+  .answer.show {
+    opacity: 1;
+    height: auto;
+  }
 
 .faq-txt {
     margin-bottom: 40px;
